sharinpix/src/objects/Credential__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_Url__c</fullName>
        <label>Endpoint url</label>
        <type>Url</type>
    </fields>
    <label>Credential</label>
</CustomObject>